# Voxel-City

./: Cargo.toml
assets/terrain/: opaque_shader.wgsl
src/: camera.rs  main.rs  menu.rs  terrain.rs
src/terrain/: chunk.rs  inspect.rs  mesh.rs  tile.rs
src/terrain/mesh/: inspect.rs  mesh_builder.rs
src/terrain/tile/: color.rs  inspect.rs  mesh.rs
