[package]
name = "voxel_city"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bevy_egui = "0.19.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam", version = "0.9.0" }
bitflags = "1.3.2"
derive_more = "0.99.17"
proptest = "1.1.0"
